[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/Cards_Back.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player_Deck.gd" type="Script" id=2]
[ext_resource path="res://scenes/Deck Size.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 88 )

[node name="Player_Deck" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="Mulligan" type="Button" parent="."]
margin_left = -32.0
margin_top = -112.0
margin_right = 34.0
margin_bottom = -92.0
text = "Mulligan"

[node name="Deck Size" type="Label" parent="."]
margin_left = -8.0
margin_top = -8.0
margin_right = 32.0
margin_bottom = 6.0
text = "15"
script = ExtResource( 3 )

[connection signal="DECK_SIZE" from="." to="Deck Size" method="_on_Player_Deck_DECK_SIZE"]
[connection signal="DRAW_CARD" from="." to="." method="_on_Player_Deck_DRAW_CARD"]
[connection signal="mouse_entered" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Sprite/Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="pressed" from="Mulligan" to="." method="_on_Mulligan_pressed"]
